css/references.css
/* Formatting the header for this page. */
.header {
  background: rgb(31, 38, 48);
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 20px;
  color: white;
}


/* Setting the background of all the references I have.*/
.firstReference {
  display: block;
  height: 300px;
}

.img1 {
  background-repeat: no-repeat;
  position: absolute;
  opacity: 0.6;
  width: 100%;
  height: 300px;
}

.container1 {
  transform: translate(-50%, -50%);
  text-align: center;
  position: absolute;
  left: 50%;
  top: 300px;
}
/* -----------------------------------------*/

.secondReference {
  display: block;
  height: 300px;
}

.img2 {
  background-repeat: no-repeat;
  position: absolute;
  top: 475px;
  opacity: 0.6;
  width: 99.2%;
  height: 300px;
  border: 5px solid rgb(48, 25, 52);
}

.container2{
  transform: translate(-50%, -50%);
  text-align: center;
  position: absolute;
  left: 50%;
  top: 615px;
}
/* -----------------------------------------*/

.thirdReference {
  display: block;
  height: 300px;
}

.img3 {
  background-repeat: no-repeat;
  position: absolute;
  top: 790px;
  opacity: 0.6;
  width: 100%;
  height: 300px;
}

.container3 {
  transform: translate(-50%, -50%);
  text-align: center;
  position: absolute;
  left: 50%;
  top: 925px;
}
/* -----------------------------------------*/

.fourthReference {
  display: block;
  height: 300px;
}

.img4 {
  background-repeat: no-repeat;
  position: absolute;
  top: 1100px;
  opacity: 0.6;
  width: 100%;
  height: 300px;
}

.container4 {
  transform: translate(-50%, -50%);
  text-align: center;
  position: absolute;
  left: 50%;
  top: 1250px;
}
/* -----------------------------------------*/


/* Changing the font for all divs. */
h4 {
  font-size: 22px;
}

p {
  font-size: 15px;
}

p.contact {
  font-size: 20px;
}

body {
  overflow-x: hidden;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
}

